12686 dladm: vnic creation over bge0 failed: object already exists Reviewed by: Ryan Zezeski <ryan@zinascii.com> Reviewed by: Patrick Mooney <pmooney@pfmooney.com> Approved by: Dan McDonald <danmcd@joyent.com>